--- a/django.html
+++ b/django.html
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span>Prathibha Institution</span>
+        <h2><b> Prathibha Institution</b></h2>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -79,8 +79,8 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="aboutus.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Images</a></li>
+          
 
           
 
