--- a/mains.html
+++ b/mains.html
@@ -95,10 +95,10 @@
   </header><!-- End Header -->
 
   <main id="main">
-
+<br>
     <!-- ======= Breadcrumbs ======= -->
     <section class="breadcrumbs">
-      <div class="container">
+      <div class="container mt-3">
 
         <ol>
           <li><a href="index.html">Home</a></li>
