--- a/bootstrap.html
+++ b/bootstrap.html
@@ -201,12 +201,7 @@
               <span>Prathibha Institution</span>
             </a>
             <p>Empowering excellence in a diverse and innovative learning community.</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-            </div>
+           
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
@@ -222,9 +217,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Courses</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Software</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">EAMCET/JEE-MAINS</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Quantitative Aptitude</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="fullstack.html">Software</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="eamcet.html">EAMCET/JEE-MAINS</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="qa.html">Quantitative Aptitude</a></li>
               
             </ul>
           </div>
