--- a/python.html
+++ b/python.html
@@ -79,8 +79,8 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="aboutus.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Images</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="image.html">Images</a></li>
+          <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -228,9 +228,9 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Courses</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Software</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">EAMCET/JEE-MAINS</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Quantitative Aptitude</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="fullstack.html">Software</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="eamcet.html">EAMCET/JEE-MAINS</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="qa.html">Quantitative Aptitude</a></li>
               
             </ul>
           </div>
