--- a/eamcet.html
+++ b/eamcet.html
@@ -135,7 +135,7 @@
               <h3>Course information</h3>
               <ul>
                 <li><strong>Course Name</strong>: EAMCET</li>
-                <li><strong>Course Duration</strong>: tills EAMCET 2024</li>
+                <li><strong>Course Duration</strong>: Till EAMCET 2024</li>
                 <li><strong>Teaching Style</strong>: Offline</li>
                 
                 
