--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
+          <h1 data-aos="fade-up">
+           </h1>
+           Our institution shapes career excellence.
+          <h2 data-aos="fade-up" data-aos-delay="400"> Our institution cultivates expertise through targeted training, empowering individuals for career excellence.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
