--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-           <h1 data-aos="fade-up"> Our institution shapes career excellence.</h1>
+           <h1 data-aos="fade-up"> 
+            Our institution advances professional expertise.
+            </h1>
           <h2 data-aos="fade-up" data-aos-delay="400"> Our institution cultivates expertise through targeted training, empowering individuals for career excellence.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
