--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           
 
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#contact">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="tel:90030941099">Call Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -305,7 +305,7 @@
               <h3>EAMCET/JEE-MAINS</h3>
           
               <p>Ace EAMCET/JEE-Mains with our easy-to-follow courses. Understand concepts, practice, and excel in engineering entrance exams for a bright future.</p>
-              <a href="eamcet-mains.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="eamcet.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
