--- a/terms.html
+++ b/terms.html
@@ -66,9 +66,9 @@
                 <ul>
                   <li><a href="c.html">C Language</a></li>
                   <li><a href="python.html">Python</a></li>
+                  <li><a href="java.html">Java</a></li>
                   <li><a href="sql.html">SQL</a></li>
-                  <li><a href="ds.html">Data Structures</a></li>
-                  <li><a href="algorithms.html">Algorithms</a></li>
+                  <li><a href="dsa.html">Data Structures and Algorithms</a></li>
                   <li><a href="html.html">HTML</a></li>
                   <li><a href="css.html">CSS</a></li>
                   <li><a href="js.html">JavaScript</a></li>
@@ -84,7 +84,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="aboutus.html">About</a></li>
-          <li><a class="nav-link scrollto" href="image.html">Images</a></li>
+          <li><a class="nav-link scrollto" href="image.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
@@ -294,6 +294,10 @@
             <span>Prathibha Institution</span>
           </a>
           <p>Empowering excellence in a diverse and innovative learning community.</p>
+
+          <div class="social-links mt-3">            
+            <a href="https://www.instagram.com/prathibha_institutions/" class="instagram"><i class="bi bi-instagram"></i></a>
+          </div>
           
         </div>
 
