--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index">Home</a></li>
           
           
           <li class="dropdown"><a href="#"><span>Courses</span> <i class="bi bi-chevron-down"></i></a>
@@ -257,7 +257,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Data Structures and Algorithms.</h3>
               <p>Discover Data Structures and Algorithms (DSA) – essential foundations for effective problem-solving and optimizing code, shaping resilient software solutions.</p>
-              <a href="ds.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="dsa.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -470,7 +470,7 @@
                 <div class="info-box">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                  <p>+91 9030941099</p>
+                  <p><a href="tel:9030941099">+91 9030941099</a></p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -552,7 +552,7 @@
               Ground Floor, D.S. Bingi Arcade <br>
               Near ABS Venture, Vinayak Nagar<br>
               Nizamabad-503001 <br><br>
-              <strong>Phone:</strong> +91 9030941099<br>
+              <a href="tel:9030941099"><strong>Phone:</strong> +91 9030941099</a><br>
               <strong>Email:</strong> prathibhainstitutions@gmail.com<br>
             </p>
 
