--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           
           
           <li class="dropdown"><a href="#"><span>Courses</span> <i class="bi bi-chevron-down"></i></a>
