--- a/terms.html
+++ b/terms.html
@@ -86,7 +86,7 @@
           <li><a class="nav-link scrollto" href="aboutus.html">About</a></li>
           <li><a class="nav-link scrollto" href="image.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="tel:90030941099">Call Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
