--- a/aboutus.html
+++ b/aboutus.html
@@ -84,7 +84,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="aboutus.html">About</a></li>
-          <li><a class="nav-link scrollto" href="images.html">Gallery</a></li>
+          <li><a class="nav-link scrollto" href="image.html">Gallery</a></li>
           
 
           
