--- a/c.html
+++ b/c.html
@@ -79,7 +79,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="aboutus.html">About</a></li>
-          <li><a class="nav-link scrollto" href="immage.html">Gallery</a></li>
+          <li><a class="nav-link scrollto" href="image.html">Gallery</a></li>
         
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
           <li><a class="getstarted scrollto" href="tel:90030941099">Call Now</a></li>
