--- a/image.html
+++ b/image.html
@@ -99,9 +99,9 @@
 
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Data Structures and Algorithms</li>
+          <li>Gallery</li>
         </ol>
-        <h2>Data Structures and Algorithms</h2>
+        <h2>Images</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
