--- a/dsa.html
+++ b/dsa.html
@@ -145,6 +145,9 @@
               </p>
             </div>
             <h5>This course includes</h5>
+            <div class="row">
+                <div class="col-lg-4">
+           
             <ul>
               <li>Introduction to Algorithms</li>
               <li>Time and Space Complexity Analysis </li>
@@ -164,9 +167,7 @@
               <li>Bit Manipulation</li>
               <li>Graph Algorithms - DFS, BFS, Dijkstra</li>
               <li>Algorithm design techniques</li>
-              
-
-            </ul>
+            </ul> </div></div>
           </div>
 
         </div>
