Spelling mistakes undone.

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
 
-  <title>Prathibha Institution </title>
+  <title>Prathibha Institute </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -49,7 +49,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <h2><b> Prathibha Institution</b></h2>
+        <h2><b> Prathibha Institute</b></h2>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -90,7 +90,7 @@
           
 
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="tel:90030941099">Call Now</a></li>
+          <li><a class="getstarted scrollto" href="tel:9030941099">Call Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -116,13 +116,13 @@
     <section class="inner-page">
       <div class="container">
         <p>
-          Welcome to <b>Prathibha Institution</b>, a distinguished educational institution committed to shaping futures and fostering innovation. Our mission is to provide a transformative learning experience that equips students with the skills, knowledge, and mindset needed to thrive in an ever-evolving world.<br>
+          Welcome to <b>Prathibha Institute</b>, a distinguished educational Institute committed to shaping futures and fostering innovation. Our mission is to provide a transformative learning experience that equips students with the skills, knowledge, and mindset needed to thrive in an ever-evolving world.<br>
           <br>
           <b>Mission:</b><br>
-          At Prathibha Institution, we strive to inspire and empower individuals through quality education. Our mission is to create a dynamic and inclusive learning environment that nurtures intellectual curiosity, creativity, and critical thinking. We are dedicated to preparing students for success in their chosen fields and instilling a lifelong passion for learning.<br>
+          At Prathibha Institute, we strive to inspire and empower individuals through quality education. Our mission is to create a dynamic and inclusive learning environment that nurtures intellectual curiosity, creativity, and critical thinking. We are dedicated to preparing students for success in their chosen fields and instilling a lifelong passion for learning.<br>
           <br>
           <b>Vision:</b><br>
-          Our vision is to be a leading institution of academic excellence, recognized for innovation, research, and global impact.
+          Our vision is to be a leading Institute of academic excellence, recognized for innovation, research, and global impact.
            We aim to cultivate a community of forward-thinking individuals who contribute meaningfully to society and lead positive change in their respective domains.<br>
            <br>
 
@@ -136,7 +136,7 @@
            <br>
 
 
-           <li><b>Integrity:</b> We uphold the principles of integrity, honesty, and ethical conduct in every aspect of our institution.<br></li>
+           <li><b>Integrity:</b> We uphold the principles of integrity, honesty, and ethical conduct in every aspect of our Institute.<br></li>
            <br>
           <li><b>Inclusivity:</b> We celebrate diversity and create an inclusive environment that respects and values individuals from all backgrounds.<br></li>
           <br>
@@ -172,12 +172,12 @@
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
             <img src="assets/img/logo.png" alt="">
-            <span>Prathibha Institution</span>
+            <span>Prathibha Institute</span>
           </a>
           <p>Empowering excellence in a diverse and innovative learning community.</p>
 
           <div class="social-links mt-3">            
-            <a href="https://www.instagram.com/prathibha_institutions/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/prathibha_institute/" class="instagram"><i class="bi bi-instagram"></i></a>
           </div>
           
         </div>
