--- a/qa.html
+++ b/qa.html
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <h2><b> Prathibha Institution</b></h2>
+        <h2><b> Prathibha Institute</b></h2>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -86,7 +86,7 @@
           
 
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="tel:90030941099">Call Now</a></li>
+          <li><a class="getstarted scrollto" href="tel:9030941099">Call Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -200,12 +200,12 @@
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
               <img src="assets/img/logo.png" alt="">
-              <span>Prathibha Institution</span>
+              <span>Prathibha Institute</span>
             </a>
             <p>Empowering excellence in a diverse and innovative learning community.</p>
 
             <div class="social-links mt-3">            
-              <a href="https://www.instagram.com/prathibha_institutions/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/prathibha_institute/" class="instagram"><i class="bi bi-instagram"></i></a>
             </div>
            
           </div>
