--- a/c.html
+++ b/c.html
@@ -69,13 +69,16 @@
                   <li><a href="css.html">CSS</a></li>
                   <li><a href="js.html">JavaScript</a></li>
                   <li><a href="bootstrap.html">Bootstrap</a></li>
+                  <li><a href="aws.html">AWS</a></li>
+                  <li><a href="selenium.html">Selenium</a></li>
+                  <li><a href="dca.html">DCA</a></li>
 
                 </ul>
                 
               <li><a href="eamcet.html">EAMCET</a></li>
               <li><a href="mains.html">JEE-MAINS</a></li>            
-              <li><a href="#">Quantitative Aptitude</a></li>
-              <li><a href="#">Logical Reasoning</a></li>
+              <li><a href="qa.html">Quantitative Aptitude</a></li>
+              <li><a href="lr.html">Logical Reasoning</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="aboutus.html">About</a></li>
