--- a/css.html
+++ b/css.html
@@ -69,6 +69,9 @@
                   <li><a href="css.html">CSS</a></li>
                   <li><a href="js.html">JavaScript</a></li>
                   <li><a href="bootstrap.html">Bootstrap</a></li>
+                  <li><a href="aws.html">AWS</a></li>
+                  <li><a href="selenium.html">Selenium</a></li>
+                  <li><a href="dca.html">DCA</a></li>
 
                 </ul>
               </li>
