--- a/inner-page.html
+++ b/inner-page.html
@@ -75,6 +75,9 @@
                   <li><a href="#">HTML</a></li>
                   <li><a href="#">CSS</a></li>
                   <li><a href="#">JavaScript</a></li>
+                  <li><a href="aws.html">AWS</a></li>
+                  <li><a href="selenium.html">Selenium</a></li>
+                  <li><a href="dca.html">DCA</a></li>
 
                 </ul>
               </li>
