--- a/bootstrap.html
+++ b/bootstrap.html
@@ -138,7 +138,7 @@
               <ul>
                 <li><strong>Course Name</strong>: Bootstrap</li>
                 <li><strong>Course Duration</strong>: 30 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
                 
               </ul>
