--- a/c.html
+++ b/c.html
@@ -137,7 +137,7 @@
               <ul>
                 <li><strong>Course Name</strong>: C Language</li>
                 <li><strong>Course Duration</strong>: 40 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
                 
               </ul>
