--- a/dsa.html
+++ b/dsa.html
@@ -135,7 +135,7 @@
               <ul>
                 <li><strong>Course Name</strong>: Data Structures and Algorithms</li>
                 <li><strong>Course Duration</strong>:  75 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
                 
               </ul>
