--- a/fullstack.html
+++ b/fullstack.html
@@ -145,7 +145,7 @@
               <ul>
                 <li><strong>Course Name</strong>: Full Stack Web Development with Python and Django</li>
                 <li><strong>Course Duration</strong>: 4 months</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
                 
               </ul>
