--- a/index.html
+++ b/index.html
@@ -247,6 +247,15 @@
           </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+            <div class="service-box blue">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Java</h3><br>
+              <p>Learn the fundamentals of object-oriented programming with Java. Build essential skills to create scalable applications and unlock opportunities in software development</p>
+              <a href="java.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-box red">
               <i class="ri-discuss-line icon"></i>
               <h3>SQL</h3><br>
@@ -308,7 +317,7 @@
               <h3>AWS</h3>
           
               <p>Learn the essentials of cloud computing with our AWS Fundamentals course. Explore core AWS services, best practices, and tools for designing and managing scalable applications—building a strong foundation for a career in cloud computing.</p>
-              <a href="eamcet.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="aws.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -317,7 +326,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Selenium</h3>
               <p>Unlock automation testing skills with our Selenium course. Master Selenium WebDriver, frameworks, and best practices to create efficient test scripts—boosting your career in QA and software development.</p>
-              <a href="qa.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="selenium.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -326,7 +335,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>DCA</h3><br>
               <p>Gain essential computing skills, covering IT fundamentals and Microsoft Office applications(Word,Excel,PowerPoint and Outlook) for success in a digital workspace.</p>
-              <a href="lr.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="dca.html" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
