--- a/js.html
+++ b/js.html
@@ -139,7 +139,7 @@
               <ul>
                 <li><strong>Course Name</strong>: JavaScript</li>
                 <li><strong>Course Duration</strong>: 2 months</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
               </ul>
             </div>
