--- a/css.html
+++ b/css.html
@@ -146,7 +146,7 @@
               <ul>
                 <li><strong>Course Name</strong>: CSS</li>
                 <li><strong>Course Duration</strong>: 30 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
               
               </ul>
