--- a/html.html
+++ b/html.html
@@ -143,7 +143,7 @@
               <ul>
                 <li><strong>Course Name</strong>: HTML</li>
                 <li><strong>Course Duration</strong>: 30 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
               </ul>
             </div>
             <div class="portfolio-description">
