--- a/java.html
+++ b/java.html
@@ -137,7 +137,7 @@
               <ul>
                 <li><strong>Course Name</strong>: Java</li>
                 <li><strong>Course Duration</strong>: 50 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
                 
               </ul>
