--- a/python.html
+++ b/python.html
@@ -139,7 +139,7 @@
               <ul>
                 <li><strong>Course Name</strong>: Python</li>
                 <li><strong>Course Duration</strong>: 50 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
                 
               </ul>
