--- a/qa.html
+++ b/qa.html
@@ -139,7 +139,7 @@
               <ul>
                 <li><strong>Course Name</strong>: Quantitative Aptitude</li>
                 <li><strong>Course Duration</strong>: 3 months</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
                 
               </ul>
