--- a/sql.html
+++ b/sql.html
@@ -135,7 +135,7 @@
               <ul>
                 <li><strong>Course Name</strong>: SQL</li>
                 <li><strong>Course Duration</strong>: 40 days</li>
-                <li><strong>Teaching Style</strong>: Offline</li>
+                <li><strong>Teaching Style</strong>: Offline & Online</li>
                 
             
               </ul>
