--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <link rel="stylesheet" href="index1.css">
 </head>
 
 <body>
@@ -48,7 +49,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-       <h2><b> Prathibha Institute</b></h2>
+       <h2><b> PRATHIBHA INSTITUTE</b></h2>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -122,7 +123,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+          <img src="assets/img/software logo.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
