--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <link rel="stylesheet" href="index1.css">
+  
 </head>
 
 <body>
@@ -562,6 +562,7 @@
 
             <div class="social-links mt-3">            
               <a href="https://www.instagram.com/prathibha_institute/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href=https://www.youtube.com/@PrathibhaInstitute class="instagram"><i class="bi bi-youtube"></i></a>
             </div>
            
           </div>
@@ -579,7 +580,7 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Courses</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="index.html">Software</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="fullstack.html">Software</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="eamcet.html">EAMCET/JEE-MAINS</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="qa.html">Quantitative Aptitude</a></li>
               
