--- a/aboutus.html
+++ b/aboutus.html
@@ -49,7 +49,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <h2><b> Prathibha Institute</b></h2>
+        <h4><b> PRATHIBHA INSTITUTE</b></h4>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -183,6 +183,7 @@
 
           <div class="social-links mt-3">            
             <a href="https://www.instagram.com/prathibha_institute/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href=https://www.youtube.com/@PrathibhaInstitute class="instagram"><i class="bi bi-youtube"></i></a>
           </div>
           
         </div>
