--- a/inner-page.html
+++ b/inner-page.html
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <h2><b> Prathibha Institute</b></h2>
+        <h4><b> PRATHIBHA INSTITUTE</b></h4>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -150,7 +150,10 @@
             <span>Prathibha Institute</span>
           </a>
           <p>Empowering excellence in a diverse and innovative learning community.</p>
-          
+          <div class="social-links mt-3">            
+            <a href="https://www.instagram.com/prathibha_institute/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href=https://www.youtube.com/@PrathibhaInstitute class="instagram"><i class="bi bi-youtube"></i></a>
+          </div>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
