--- a/mathematics1.html
+++ b/mathematics1.html
@@ -30,10 +30,15 @@
       background-color: #ccc;
       cursor: not-allowed;
     }
+    .footer-container {
+        background-color: rgb(23, 41, 84);
+        color: white;
+        text-align: center;
+    }
   </style>
 </head>
 <body>
-  <section class="header" style="font-family: sans-serif;color: rgb(99, 99, 99);">
+  <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
     <nav>
         <img src="logo.png" alt="" class="logo">    
     </nav>   
@@ -97,7 +102,12 @@
       <button id="generateBtn" class="btn btn-primary" disabled>Start Mock Test</button>
     </div>
   </main>
-
+  <footer id="footer" class="footer">
+    <hr>
+    <div class="footer-container">
+      <h5> Designed by Prathibha Solutions</h5>
+  </div>
+</footer>
   <div id="popup">
     <div id="popupContent">
       <p id="popupMessage"></p>
