--- a/exams.html
+++ b/exams.html
@@ -89,7 +89,7 @@
           <div class="container mt-3">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Home</a></li>
+                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Exams</li>
                 </ol>
               </nav>
