--- a/exams.html
+++ b/exams.html
@@ -120,8 +120,8 @@
                     <div class="card p-3">
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('eapcet_chapters')">Chapters</button>
                         <div id="eapcet_chapters" class="nested-subcategories d-none">
-                            <a href="eapcet_physics.html" class="btn btn-success mb-2">Physics</a>
-                            <a href="eapcet_chemistry.html" class="btn btn-success mb-2">Chemistry</a>
+                            <a href="Permutations and Combinations.html" class="btn btn-success mb-2">Permutations and Combinations</a>
+                            <a href="Probability.html" class="btn btn-success mb-2">Probability</a>
                             <a href="eapcet_math.html" class="btn btn-success mb-2">Mathematics</a>
                         </div>
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('eapcet_topics')">Topics</button>
