--- a/fulltest1.html
+++ b/fulltest1.html
@@ -121,15 +121,23 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "JEE-MAINS";
-    const examTimer = 60;
-    const examfolder = "mathematics1";
-    const numberofquestions = 25;
+    const examTimer = 180;
+    const examfolder = "fulltest1";
+    const numberofquestions = 75;
     const positivemark = 4;
     const negativemark = -1;
 
     // Example hardcoded answers (you can replace this with actual answer keys)
     const correctAnswers = [
-      "C", "C", "D", "A", "D", "A", "D", "C", "A", "C",
+    "D","A","A","A","A","D","C","A","A","A",
+    "A","D","B","A","B","B","C","C","B","A",
+    "B","D","A","A","D",
+
+    "A","C","D","D","B","D","D","C","A","B",
+    "C","C","B","B","C","A","D","D","C","B",
+    "91","2","6","40","2",
+ 
+    "C", "C", "D", "A", "D", "A", "D", "C", "A", "C",
       "C", "C", "B", "C", "A", "A", "C", "D", "A", "D",
       "B", "C", "B", "D", "B"
     ];
