--- a/exams.html
+++ b/exams.html
@@ -145,7 +145,7 @@
                         </div>
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('jee_topics')">Subjectwise Full tests</button>
                         <div id="jee_topics" class="nested-subcategories d-none">
-                            <a href="mathematics1.html" class="btn btn-success mb-2">Mathematics-1</a>
+                            <a href="fulltest1.html" class="btn btn-success mb-2">Full Test-1</a>
                             
                         </div>
                     </div>
