--- a/exams.html
+++ b/exams.html
@@ -118,7 +118,7 @@
                 
                 <div id="eapcet" class="subcategories mt-3 d-none">
                     <div class="card p-3">
-                        <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('eapcet_chapters')">Chapters</button>
+                        <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('eapcet_chapters')">Maths Chapters-Wise Questions </button>
                         <div id="eapcet_chapters" class="nested-subcategories d-none">
                             <a href="Eapcet_Questions_html/Maths/Complex_Numbers.html" class="btn btn-success mb-2">Complex Numbers</a>
                             <a href="Eapcet_Questions_html/Maths/Quadratic_Expressions.html" class="btn btn-success mb-2">Quadratic Expressions</a>
