--- a/exams.html
+++ b/exams.html
@@ -119,7 +119,7 @@
                 <div id="eapcet" class="subcategories mt-3 d-none">
                     <div class="card p-3">
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('maths_chapters')">Maths Chapters-Wise Questions </button>
-                        <div id="eapcet_chapters" class="nested-subcategories d-none">
+                        <div id="maths_chapters" class="nested-subcategories d-none">
                             <a href="Eapcet_Questions_html/Maths/Complex_Numbers.html" class="btn btn-success mb-2">Complex Numbers</a>
                             <a href="Eapcet_Questions_html/Maths/Quadratic_Expressions.html" class="btn btn-success mb-2">Quadratic Expressions</a>
                             <a href="Eapcet_Questions_html/Maths/Theory _of_Equations.html" class="btn btn-success mb-2">Theory of Equations</a>
