--- a/exams.html
+++ b/exams.html
@@ -155,8 +155,31 @@
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('chemistry_chapters')">Chemistry Chapters-Wise Questions </button>
                         <div id="chemistry_chapters" class="nested-subcategories d-none">
                             <a href="Eapcet_Questions_html/chemistry/Some_Basic_Concepts_and_Stoichiometry.html" class="btn btn-success mb-2">Some Basic Concepts and Stoichiometry</a>
+                            <a href="Eapcet_Questions_html/chemistry/Atomic_Structure.html" class="btn btn-success mb-2">Atomic Structure</a>
+                            <a href="Eapcet_Questions_html/chemistry/Chemical_Bonding.html" class="btn btn-success mb-2">Chemical Bonding and Molecular Structure</a>
+                            <a href="Eapcet_Questions_html/chemistry/Gaseous_and_Liquid_States.html" class="btn btn-success mb-2">Gaseous and Liquid States</a>
+                            <a href="Eapcet_Questions_html/chemistry/Solid_State.html" class="btn btn-success mb-2">Solid State</a>
+                            <a href="Eapcet_Questions_html/chemistry/Solutions.html" class="btn btn-success mb-2">Solutions</a>
+                            <a href="Eapcet_Questions_html/chemistry/Thermodynamics.html" class="btn btn-success mb-2">Thermodynamics</a>
+                            <a href="Eapcet_Questions_html/chemistry/Chemical_Equilibrium.html" class="btn btn-success mb-2">Chemical Equilibrium</a>
+                            <a href="Eapcet_Questions_html/chemistry/Chemical_Kinetics.html" class="btn btn-success mb-2">Chemical Kinetics</a>
+                            <a href="Eapcet_Questions_html/chemistry/Electrochemistry.html" class="btn btn-success mb-2">Electrochemistry</a>
+                            <a href="Eapcet_Questions_html/chemistry/Surface_Chemistry.html" class="btn btn-success mb-2">Surface Chemistry</a>
+                            <a href="Eapcet_Questions_html/chemistry/General_principles_of_Metallurgy.html" class="btn btn-success mb-2">General principles of Metallurgy</a>
+                            <a href="Eapcet_Questions_html/chemistry/Periodic_Properties.html" class="btn btn-success mb-2">Classification of Elements and Periodic Properties</a>
+                            <a href="Eapcet_Questions_html/chemistry/Hydrogen.html" class="btn btn-success mb-2">Hydrogen and its Compounds</a>
+                            <a href="Eapcet_Questions_html/chemistry/s_p_block.html" class="btn btn-success mb-2">S and P-Block Elements</a>
+                            <a href="Eapcet_Questions_html/chemistry/d_f_block.html" class="btn btn-success mb-2">Transition Elements(d & f-Block Elements)</a>
+                            <a href="Eapcet_Questions_html/chemistry/coordination_compunds.html" class="btn btn-success mb-2">Coordination Compounds</a>
+                            <a href="Eapcet_Questions_html/chemistry/Organic_chemistry.html" class="btn btn-success mb-2">General Organic Chemistry and Hydrocarbons</a>
+                            <a href="Eapcet_Questions_html/chemistry/Haloalkanes.html" class="btn btn-success mb-2">Haloalkanes and Haloarenes</a>
+                            <a href="Eapcet_Questions_html/chemistry/Alcohols.html" class="btn btn-success mb-2">Alcohols,Phenols and Ethers</a>
+                            <a href="Eapcet_Questions_html/chemistry/Aldehydes.html" class="btn btn-success mb-2">Aldehydes,Ketones and Carboxylic Acids</a>
+                            <a href="Eapcet_Questions_html/chemistry/Organic_compounds.html" class="btn btn-success mb-2">Organic Compounds Containing Nitrogen</a>   
                             <a href="Eapcet_Questions_html/chemistry/Polymers.html" class="btn btn-success mb-2">Polymers</a>
-                            
+                            <a href="Eapcet_Questions_html/chemistry/Biomolecules.html" class="btn btn-success mb-2">Biomolecules and Chemistry in Everyday Life</a>
+                            <a href="Eapcet_Questions_html/chemistry/Environmental.html" class="btn btn-success mb-2">Environmental Chemistry</a>
+                           
                         </div>
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('eapcet_topics')">Topics</button>
                         <div id="eapcet_topics" class="nested-subcategories d-none">
