--- a/exams.html
+++ b/exams.html
@@ -201,7 +201,7 @@
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('jee_topics')">Subjectwise Full tests</button>
                         <div id="jee_topics" class="nested-subcategories d-none">
                             <a href="fulltest1.html" class="btn btn-success mb-2">Full Test-1</a>
-                            
+                            <a href="Jee-Mains mock test/Mock_Test_1.html" class="btn btn-success mb-2">Mock Test 1</a>
                         </div>
                     </div>
                 </div>
