--- a/Eapcet_Questions_html/Maths/Definite_Integrals_and_Its_Applications.html
+++ b/Eapcet_Questions_html/Maths/Definite_Integrals_and_Its_Applications.html
@@ -122,7 +122,7 @@
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
     const examTimer = 60;
-    const examfolder = "question_images/Definite Integrals and Its Applications";
+    const examfolder = "question_images/Definite Integrals";
     const numberofquestions = 65;
     const positivemark = 1;
     const negativemark = 0;
