--- a/Eapcet_Questions_html/Maths/Inverse_Trigonometric_Functions.html
+++ b/Eapcet_Questions_html/Maths/Inverse_Trigonometric_Functions.html
@@ -122,7 +122,7 @@
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
     const examTimer = 60;
-    const examfolder = "question_images/Inverse Trigonometric Functions";
+    const examfolder = "question_images/inverse Trigonometric";
     const numberofquestions = 15;
     const positivemark = 1;
     const negativemark = 0;
