--- a/exams.html
+++ b/exams.html
@@ -202,6 +202,7 @@
                         <div id="jee_topics" class="nested-subcategories d-none">
                             <a href="fulltest1.html" class="btn btn-success mb-2">Full Test-1</a>
                             <a href="Jee-Mains mock test/Mock_Test_1.html" class="btn btn-success mb-2">Mock Test 1</a>
+                            <a href="Jee-Mains mock test/Mock_Test_2.html" class="btn btn-success mb-2">Mock Test 2</a>
                         </div>
                     </div>
                 </div>
